--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ana Paula Estética</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Title</h1>
+        <nav>
+            
+        </nav>
+    </header>
+    <section>
+        <header></header>
+        <nav></nav>
+    </section>
+    <section>
+        <header></header>
+        <article>
+            <header></header>
+            <footer></footer>
+        </article>
+    </section>
+    <footer></footer>
 </body>
 </html>
