--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>Title</h1>
-        <nav>
-            
+        <h1>NOME PRINCIPAL</h1>
+        <nav class="menuSuperior">
+            <a href="">LINK01</a>
+            <a href="">LINK02</a>
+            <a href="">LINK03</a>
         </nav>
     </header>
     <section>
