--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img class="logoPrincipal" src="img/logo.png" alt="">
         <h1>NOME PRINCIPAL</h1>
         <nav class="menuSuperior">
             <a href="">LINK01</a>
